--- a/resources/templates/METATRANSCRIPT.Session.MDGroup.Actors.Actor.xml
+++ b/resources/templates/METATRANSCRIPT.Session.MDGroup.Actors.Actor.xml
@@ -1,40 +1,48 @@
-        <Actor>
-          <Role 
+
+<InsertableSection
+	xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" >
+    <Actor>
+        <Role 
 		Link="http://www.mpi.nl/IMDI/Schema/Actor-Role.xml" 
-		Type="OpenVocabularyList">Unspecified</Role>
-          <Name/>
-          <FullName/>
-          <Code/>
-          <FamilySocialRole 
+		Type="OpenVocabularyList">Unspecified
+        </Role>
+        <Name>Standard Actor</Name>
+        <FullName/>
+        <Code/>
+        <FamilySocialRole 
 		Link="http://www.mpi.nl/IMDI/Schema/Actor-FamilySocialRole.xml" 
-		Type="OpenVocabularyList">Unspecified</FamilySocialRole>
-          <Languages>
+		Type="OpenVocabularyList">Unspecified
+        </FamilySocialRole>
+        <Languages>
             <Description LanguageId="" Link=""/>
             <Language>
-            	<Id>Unspecified</Id>
-              <Name  
+                <Id>Unspecified</Id>
+                <Name  
 			Link="http://www.mpi.nl/IMDI/Schema/MPI-Languages.xml" 
-			Type="OpenVocabulary">Unspecified</Name>
-              <MotherTongue>Unspecified</MotherTongue>
-              <PrimaryLanguage>Unspecified</PrimaryLanguage>
-              <Description LanguageId="" Link=""/>
+			Type="OpenVocabulary">Unspecified
+                </Name>
+                <MotherTongue>Unspecified</MotherTongue>
+                <PrimaryLanguage>Unspecified</PrimaryLanguage>
+                <Description LanguageId="" Link=""/>
             </Language>
-          </Languages>
-          <EthnicGroup/>
-          <Age>Unspecified</Age>
-          <BirthDate>Unspecified</BirthDate>
-          <Sex Link="http://www.mpi.nl/IMDI/Schema/Actor-Sex.xml" 
-		Type="ClosedVocabulary">Unspecified</Sex>
-          <Education>Unspecified</Education>
-          <Anonymized>Unspecified</Anonymized>
-          <Contact>
+        </Languages>
+        <EthnicGroup/>
+        <Age>Unspecified</Age>
+        <BirthDate>Unspecified</BirthDate>
+        <Sex Link="http://www.mpi.nl/IMDI/Schema/Actor-Sex.xml" 
+		Type="ClosedVocabulary">Unspecified
+        </Sex>
+        <Education>Unspecified</Education>
+        <Anonymized>Unspecified</Anonymized>
+        <Contact>
             <Name/>
             <Address/>
             <Email/>
             <Organisation/>
-          </Contact>
-          <Keys>
+        </Contact>
+        <Keys>
             <Key Name=""/>
-          </Keys>
-          <Description LanguageId="" Link=""/>
-        </Actor>
+        </Keys>
+        <Description LanguageId="" Link=""/>
+    </Actor>
+</InsertableSection>
