--- a/resources/templates/METATRANSCRIPT.Session.MDGroup.Content.Languages.Language.xml
+++ b/resources/templates/METATRANSCRIPT.Session.MDGroup.Content.Languages.Language.xml
@@ -1,10 +1,14 @@
-          <Language>
-            <Id>Unspecified</Id>
-            <Name Link="http://www.mpi.nl/IMDI/Schema/MPI-Languages.xml" 
-		Type="OpenVocabulary">Unspecified</Name>
-            <Dominant>Unspecified</Dominant>
-            <SourceLanguage>Unspecified</SourceLanguage>
-            <TargetLanguage>Unspecified</TargetLanguage>
-            <Description LanguageId="" Link=""/>
-          </Language>
+
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI">
+    <Language>
+        <Id>Unspecified</Id>
+        <Name Link="http://www.mpi.nl/IMDI/Schema/MPI-Languages.xml" 
+		Type="OpenVocabulary">Standard Language
+        </Name>
+        <Dominant>Unspecified</Dominant>
+        <SourceLanguage>Unspecified</SourceLanguage>
+        <TargetLanguage>Unspecified</TargetLanguage>
+        <Description LanguageId="" Link=""/>
+    </Language>
+</InsertableSection>
 
