--- a/resources/templates/METATRANSCRIPT.Session.Resources.MediaFile.xml
+++ b/resources/templates/METATRANSCRIPT.Session.Resources.MediaFile.xml
@@ -1,31 +1,36 @@
-      <MediaFile>
+
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="WrittenResource,LexiconResource,LexiconComponent,Source,Anonyms">
+    <MediaFile>
         <ResourceLink/>
         <Type Link="http://www.mpi.nl/IMDI/Schema/MediaFile-Type.xml" 
 		Type="ClosedVocabulary" 
-		>Unspecified</Type>
+		>Unspecified
+        </Type>
         <Format Link="http://www.mpi.nl/IMDI/Schema/MediaFile-Format.xml" 
-		Type="OpenVocabulary">Unspecified</Format>
+		Type="OpenVocabulary">Unspecified
+        </Format>
         <Size/>
         <Quality>Unspecified</Quality>
         <RecordingConditions/>
         <TimePosition>
-          <Start>Unspecified</Start>
-          <End>Unspecified</End>
+            <Start>Unspecified</Start>
+            <End>Unspecified</End>
         </TimePosition>
         <Access>
-          <Availability/>
-          <Date>Unspecified</Date>
-          <Owner/>
-          <Publisher/>
-          <Contact>
-            <Name/>
-            <Address/>
-            <Email/>
-            <Organisation/>
-          </Contact>
-          <Description LanguageId="" Link=""/>
+            <Availability/>
+            <Date>Unspecified</Date>
+            <Owner/>
+            <Publisher/>
+            <Contact>
+                <Name/>
+                <Address/>
+                <Email/>
+                <Organisation/>
+            </Contact>
+            <Description LanguageId="" Link=""/>
         </Access>
         <Description LanguageId="" Link=""/>
         <Keys>
         </Keys>
-      </MediaFile>
+    </MediaFile>
+</InsertableSection>
