--- a/resources/templates/METATRANSCRIPT.Session.Resources.Source.xml
+++ b/resources/templates/METATRANSCRIPT.Session.Resources.Source.xml
@@ -1,31 +1,35 @@
-      <Source>
+
+<InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="Anonyms">
+    <Source>
         <Id/>
         <Format Link="http://www.mpi.nl/IMDI/Schema/Source-Format.xml" 
-		Type="OpenVocabulary">Unspecified</Format>
+		Type="OpenVocabulary">Unspecified
+        </Format>
         <Quality>Unspecified</Quality>
         <CounterPosition>
-          <Start>Unspecified</Start>
-          <End>Unspecified</End>
+            <Start>Unspecified</Start>
+            <End>Unspecified</End>
         </CounterPosition>
         <TimePosition>
-          <Start>Unspecified</Start>
-          <End>Unspecified</End>
+            <Start>Unspecified</Start>
+            <End>Unspecified</End>
         </TimePosition>
         <Access>
-          <Availability/>
-          <Date>Unspecified</Date>
-          <Owner/>
-          <Publisher/>
-          <Contact>
-            <Name/>
-            <Address/>
-            <Email/>
-            <Organisation/>
-          </Contact>
-          <Description LanguageId="" Link=""/>
+            <Availability/>
+            <Date>Unspecified</Date>
+            <Owner/>
+            <Publisher/>
+            <Contact>
+                <Name/>
+                <Address/>
+                <Email/>
+                <Organisation/>
+            </Contact>
+            <Description LanguageId="" Link=""/>
         </Access>
         <Description LanguageId="" Link=""/>
         <Keys>
-          <Key Name=""/>
+            <Key Name=""/>
         </Keys>
-      </Source>
+    </Source>
+</InsertableSection>
