--- a/resources/templates/METATRANSCRIPT.Session.Resources.Source.xml
+++ b/resources/templates/METATRANSCRIPT.Session.Resources.Source.xml
@@ -2,21 +2,19 @@
 <InsertableSection xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" InsertBefore="Anonyms">
     <Source>
         <Id/>
-        <Format Link="http://www.mpi.nl/IMDI/Schema/Source-Format.xml" 
-		Type="OpenVocabulary">Unspecified
-        </Format>
-        <Quality>Unspecified</Quality>
+        <Format Link="http://www.mpi.nl/IMDI/Schema/Source-Format.xml" Type="OpenVocabulary"></Format>
+        <Quality></Quality>
         <CounterPosition>
-            <Start>Unspecified</Start>
-            <End>Unspecified</End>
+            <Start></Start>
+            <End></End>
         </CounterPosition>
         <TimePosition>
-            <Start>Unspecified</Start>
-            <End>Unspecified</End>
+            <Start></Start>
+            <End></End>
         </TimePosition>
         <Access>
             <Availability/>
-            <Date>Unspecified</Date>
+            <Date></Date>
             <Owner/>
             <Publisher/>
             <Contact>
