--- a/resources/templates/METATRANSCRIPT.Session.Resources.WrittenResource.xml
+++ b/resources/templates/METATRANSCRIPT.Session.Resources.WrittenResource.xml
@@ -3,39 +3,26 @@
     <WrittenResource>
         <ResourceLink/>
         <MediaResourceLink/>
-        <Date>Unspecified</Date>
-        <Type Link="http://www.mpi.nl/IMDI/Schema/WrittenResource-Type.xml" 
-		Type="OpenVocabulary">Unspecified
-        </Type>
-        <SubType Link="http://www.mpi.nl/IMDI/Schema/WrittenResource-SubType.xml" 
-		Type="OpenVocabularyList">Unspecified
-        </SubType>
-        <Format Link="http://www.mpi.nl/IMDI/Schema/WrittenResource-Format.xml" 
-		Type="OpenVocabulary">Unspecified
-        </Format>
+        <Date></Date>
+        <Type Link="http://www.mpi.nl/IMDI/Schema/WrittenResource-Type.xml" Type="OpenVocabulary"></Type>
+        <SubType Link="http://www.mpi.nl/IMDI/Schema/WrittenResource-SubType.xml" Type="OpenVocabularyList"></SubType>
+        <Format Link="http://www.mpi.nl/IMDI/Schema/WrittenResource-Format.xml" Type="OpenVocabulary"></Format>
         <Size/>
         <Validation>
-            <Type Link="http://www.mpi.nl/IMDI/Schema/Validation-Type.xml" 
-		Type="ClosedVocabulary">Unspecified
-            </Type>
+            <Type Link="http://www.mpi.nl/IMDI/Schema/Validation-Type.xml" Type="ClosedVocabulary"></Type>
             <Methodology 
-		Link="http://www.mpi.nl/IMDI/Schema/Validation-Methodology.xml" 
-		Type="ClosedVocabulary">Unspecified
-            </Methodology>
-            <Level>Unspecified</Level>
+		Link="http://www.mpi.nl/IMDI/Schema/Validation-Methodology.xml" Type="ClosedVocabulary"></Methodology>
+            <Level></Level>
             <Description LanguageId="" Link=""/>
         </Validation>
-        <Derivation 
-		Link="http://www.mpi.nl/IMDI/Schema/WrittenResource-Derivation.xml" 
-		Type="ClosedVocabulary">Unspecified
-        </Derivation>
+        <Derivation Link="http://www.mpi.nl/IMDI/Schema/WrittenResource-Derivation.xml" Type="ClosedVocabulary"></Derivation>
         <CharacterEncoding/>
         <ContentEncoding/>
         <LanguageId/>
-        <Anonymized>Unspecified</Anonymized>
+        <Anonymized></Anonymized>
         <Access>
             <Availability/>
-            <Date>Unspecified</Date>
+            <Date></Date>
             <Owner/>
             <Publisher/>
             <Contact>
@@ -47,7 +34,6 @@
             <Description LanguageId="" Link=""/>
         </Access>
         <Description LanguageId="" Link=""/>
-        <Keys>
-        </Keys>
+        <Keys></Keys>
     </WrittenResource>
 </InsertableSection>
