Enabled the delete action on the local corpus cache nodes. Added function to delete imdi sub nodes. Added check for jtree to make sure that all nodes are removed when required. Corrected add/remove tree node process. Reduced some concurrency issues. Made the search more robust when handling huge numbers of results. Added Templates menu based on the templates directory. Changed the naming of templates to favourites because the file templates are now also in use. Added large arbil icon. When an Imdi is deleted favourites and tables are now tidied up. Added additional templates.

--- a/resources/templates/METATRANSCRIPT.Session.MDGroup.Actors.Actor.xml
+++ b/resources/templates/METATRANSCRIPT.Session.MDGroup.Actors.Actor.xml
@@ -11,17 +11,17 @@
             <Language>
                 <Id></Id>
                 <Name Link="http://www.mpi.nl/IMDI/Schema/MPI-Languages.xml" Type="OpenVocabulary"></Name>
-                <MotherTongue></MotherTongue>
-                <PrimaryLanguage></PrimaryLanguage>
+                <MotherTongue>Unspecified</MotherTongue>
+                <PrimaryLanguage>Unspecified</PrimaryLanguage>
                 <Description LanguageId="" Link=""/>
             </Language>
         </Languages>
         <EthnicGroup/>
-        <Age></Age>
-        <BirthDate></BirthDate>
+        <Age>Unspecified</Age>
+        <BirthDate>Unspecified</BirthDate>
         <Sex Link="http://www.mpi.nl/IMDI/Schema/Actor-Sex.xml" Type="ClosedVocabulary"></Sex>
-        <Education></Education>
-        <Anonymized></Anonymized>
+        <Education>Unspecified</Education>
+        <Anonymized>Unspecified</Anonymized>
         <Contact>
             <Name/>
             <Address/>
