--- a/resources/templates/METATRANSCRIPT.Session.xml
+++ b/resources/templates/METATRANSCRIPT.Session.xml
@@ -11,7 +11,7 @@
   <Session>
     <Name>Standard (Session) Resource Bundle</Name>
     <Title/>
-    <Date></Date>
+    <Date>Unspecified</Date>
     <Description LanguageId="" Link=""/>
     <MDGroup>
       <Location>
