--- a/resources/templates/METATRANSCRIPT.Session.MDGroup.Actors.Actor.xml
+++ b/resources/templates/METATRANSCRIPT.Session.MDGroup.Actors.Actor.xml
@@ -11,8 +11,8 @@
             <Language>
                 <Id></Id>
                 <Name Link="http://www.mpi.nl/IMDI/Schema/MPI-Languages.xml" Type="OpenVocabulary"></Name>
-                <MotherTongue>Unspecified</MotherTongue>
-                <PrimaryLanguage>Unspecified</PrimaryLanguage>
+                <MotherTongue Link="http://www.mpi.nl/IMDI/Schema/Boolean.xml" Type="ClosedVocabulary">Unspecified</MotherTongue>
+                <PrimaryLanguage Link="http://www.mpi.nl/IMDI/Schema/Boolean.xml" Type="ClosedVocabulary">Unspecified</PrimaryLanguage>
                 <Description LanguageId="" Link=""/>
             </Language>
         </Languages>
@@ -21,7 +21,7 @@
         <BirthDate>Unspecified</BirthDate>
         <Sex Link="http://www.mpi.nl/IMDI/Schema/Actor-Sex.xml" Type="ClosedVocabulary"></Sex>
         <Education>Unspecified</Education>
-        <Anonymized>Unspecified</Anonymized>
+        <Anonymized Link="http://www.mpi.nl/IMDI/Schema/Boolean.xml" Type="ClosedVocabulary">Unspecified</Anonymized>
         <Contact>
             <Name/>
             <Address/>
