--- a/resources/templates/METATRANSCRIPT.Catalogue.xml
+++ b/resources/templates/METATRANSCRIPT.Catalogue.xml
@@ -1,83 +1,86 @@
 <?xml version="1.0" encoding="utf-8" ?>
 
-<METATRANSCRIPT xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" Date="" FormatId="IMDI 3.0" Originator="admin" Type="CATALOGUE" Version="12" xsi:schemaLocation="http://www.mpi.nl/IMDI/Schema/IMDI ./IMDI_3.0.xsd">
-	<History/>
-	<Catalogue>
-		<Name/>
-		<Title/>
-		<Id/>
-		<Description ArchiveHandle="" LanguageId="" Link="" Name=""/>
-		<DocumentLanguages>
-			<!--Description: minOccurs=0 maxOccurs=unbounded-->
-			<Description ArchiveHandle="" LanguageId="" Link="" Name=""/>
-			<!--Language: minOccurs=0 maxOccurs=unbounded-->
-			<Language>
-				<Id/>
-				<Name Link="http://www.mpi.nl/IMDI/Schema/MPI-Languages.xml" Type="OpenVocabulary"/>
-			</Language>
-		</DocumentLanguages>
-		<SubjectLanguages>
-			<!--Description: minOccurs=0 maxOccurs=unbounded-->
-			<Description ArchiveHandle="" LanguageId="" Link="" Name=""/>
-			<!--Language: minOccurs=0 maxOccurs=unbounded-->
-			<Language>
-				<Id/>
-				<Name Link="http://www.mpi.nl/IMDI/Schema/MPI-Languages.xml" Type="OpenVocabulary"/>
-				<Dominant/><!--Boolean-->
-				<SourceLanguage/><!--Boolean-->
-				<TargetLanguage/><!--Boolean-->
-				<!--Description: minOccurs=0 maxOccurs=unbounded-->
-				<Description ArchiveHandle="" LanguageId="" Link="" Name=""/>
-			</Language>
-		</SubjectLanguages>
-		<Location>
-			<Continent Link="http://www.mpi.nl/IMDI/Schema/Continents.xml" Type="OpenVocabulary"/>
-			<Country Link="http://www.mpi.nl/IMDI/Schema/Countries.xml" Type="ClosedVocabulary"/>
-			<Region/>
-			<Address/>
-		</Location>
+<METATRANSCRIPT xmlns="http://www.mpi.nl/IMDI/Schema/IMDI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" Date="2009-07-09" FormatId="IMDI 3.0" Originator="admin" Type="CATALOGUE" Version="12" xsi:schemaLocation="http://www.mpi.nl/IMDI/Schema/IMDI ./IMDI_3.0.xsd">
+    <History/>
+    <Catalogue>
+        <Name/>
+        <Title/>
+        <Id/>
+		<!--Description: minOccurs=0 maxOccurs=unbounded-->
+        <Description ArchiveHandle="" LanguageId="" Link="" Name=""/>
+        <DocumentLanguages>
+            <!--Description: minOccurs=0 maxOccurs=unbounded-->
+            <!--Language: minOccurs=0 maxOccurs=unbounded-->
+        </DocumentLanguages>
+        <SubjectLanguages>
+            <!--Description: minOccurs=0 maxOccurs=unbounded-->
+            <!--Language: minOccurs=0 maxOccurs=unbounded-->
+        </SubjectLanguages>
+		<!--Location: minOccurs=1 maxOccurs=unbounded-->
+        <Location>
+            <Continent Link="http://www.mpi.nl/IMDI/Schema/Continents.xml" Type="OpenVocabulary"/>
+            <Country Link="http://www.mpi.nl/IMDI/Schema/Countries.xml" Type="ClosedVocabulary"/>
+            <Region/>
+            <Address/>
+        </Location>
 		<!--ContentType: minOccurs=1 maxOccurs=unbounded-->
-		<ContentType/>
-		<Format>
-			<Text/>
-			<Audio/>
-			<Video/>
-		</Format>
-		<Quality/>
-		<SmallestAnnotationUnit/>
-		<Applications/>
-		<Date/>
-		<Project>
-			<Name/>
-			<Title/>
-			<Id/>
-			<Contact/>
+        <ContentType/>
+        <Format>
+            <Text/>
+            <Audio/>
+            <Video/>
+            <Image/>
+        </Format>
+        <Quality>
+            <Text/>
+            <Audio/>
+            <Video/>
+            <Image/>
+        </Quality>
+        <SmallestAnnotationUnit/>
+        <Applications/>
+        <Date>Unspecified</Date>
+        <Project>
+            <Name/>
+            <Title/>
+            <Id/>
+            <Contact>
+                <Name/>
+                <Address/>
+                <Email/>
+                <Organisation/>
+            </Contact>
 			<!--Description: minOccurs=0 maxOccurs=unbounded-->
-			<Description ArchiveHandle="" LanguageId="" Link="" Name=""/>
-		</Project>
+            <Description ArchiveHandle="" LanguageId="" Link="" Name=""/>
+        </Project>
 		<!--Publisher: maxOccurs=unbounded-->
-		<Publisher/>
-		<Authors/>
-		<Size/>
-		<DistributionForm/>
-		<Access>
-			<Availability/>
-			<Date/>
-			<Owner/>
-			<Publisher/>
-			<Contact/>
+        <Publisher/>
+		<!--Author: maxOccurs=unbounded-->
+        <Author/>
+        <Size/>
+        <DistributionForm/>
+        <Access>
+            <Availability/>
+            <Date>Unspecified</Date>
+            <Owner/>
+            <Publisher/>
+            <Contact>
+                <Name/>
+                <Address/>
+                <Email/>
+                <Organisation/>
+            </Contact>
 			<!--Description: minOccurs=0 maxOccurs=unbounded-->
-			<Description ArchiveHandle="" LanguageId="" Link="" Name=""/>
-		</Access>
-		<Pricing/>
-		<ContactPerson/>
-		<BeginYear/>
-		<EndYear/>
-		<ReferenceLink/>
-		<MetadataLink/>
-		<Publications/>
-		<Keys>
-		</Keys>
-  </Catalogue>
+            <Description ArchiveHandle="" LanguageId="" Link="" Name=""/>
+        </Access>
+        <Pricing/>
+        <ContactPerson/>
+        <ReferenceLink/>
+        <MetadataLink/>
+        <Publications/>
+        <Keys>
+            <!--Key: minOccurs=0 maxOccurs=unbounded-->
+        </Keys>
+    </Catalogue>
 </METATRANSCRIPT>
 
