Added loading of the arbil template settings from file. Add a default arbil template for testing based on the current testing values used in the default template. Added more Mac specific hot keys. Renamed some tabs and provided more hints to the user in the import / export dialogue box. Added the field usage description shown in the table to the template file.

--- a/resources/templates/template.xml
+++ b/resources/templates/template.xml
@@ -90,4 +90,12 @@
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.WrittenResource.xml" DisplayName="WrittenResource" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.xml" DisplayName="Session" />
     </AvailableTemplateComponents>
+    <FieldUsageDescriptions>
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.Title" FieldDescription="The title of this session" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.Name" FieldDescription="The name of this session (also used to name the session in various applications)" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Session.Description" FieldDescription="The general desciption of this session" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Corpus.Title" FieldDescription="The title of this Corpus" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Corpus.Name" FieldDescription="The name of this corpus (also used to name this corpus in various applications)" />
+        <FieldUsage FieldPath=".METATRANSCRIPT.Corpus.Description" FieldDescription="The general description of this corpus" />
+    </FieldUsageDescriptions>
 </template>
