Updated the links of resource files on import both when the copy resource option is deselected and when the copy fails so that the user always ends up with a valid link to the resource irrespective of where it exists. Implemented undo / redo of field changes. Merged similar dialogue messages into a single dialogues where possible. Added context help on importing imdi editor actors etc. to Arbil. Corrected add menu population. Started to add delete action for addable fields ie. description and key. Added global key for undo redo: ctrl z/Z and meta z/Z. Modified the ctrl s and meta s for save to work globally throughout the application. Prevented the mac version loosing the last typed char when entering edit mode. Prevented ctrl, alt, meta keys starting the edit mode of the table cell. Added a template for Content Language Description.

--- a/resources/templates/template.xml
+++ b/resources/templates/template.xml
@@ -82,6 +82,7 @@
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Actors.Actor.xml" DisplayName="Actor" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Content.Keys.Key.xml" DisplayName="Content Key" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Content.Languages.Language.xml" DisplayName="Content Language" />
+        <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Content.Languages.Language(x).Description.xml" DisplayName="Content Language Description" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.MDGroup.Keys.Key.xml" DisplayName="Key" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.MediaFile.xml" DisplayName="MediaFile" />
         <TemplateComponent FileName="METATRANSCRIPT.Session.Resources.Source(x).Keys.Key.xml" DisplayName="Source Key" />
